--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 authors = ["Yuta Saito <kateinoigakukun@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 anyhow = "1.0.38"
 memchr = { version = "2", default-features = false }
 nix = "0.19.1"
+log = "0.4"
+env_logger = "0.8.3"
