--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.38"
 memchr = { version = "2", default-features = false }
+num_enum = "0.5.1"
 nix = "0.19.1"
 log = "0.4"
 env_logger = "0.8.3"
